creada variable titulo en detalle-component

--- a/src/app/clientes/detalle/detalle.component.html
+++ b/src/app/clientes/detalle/detalle.component.html
@@ -2,7 +2,7 @@
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Detalle del cliente:</h5>
+        <h5 class="modal-title">{{titulo<}}</h5>
         <button (click)="cerrarModal()" type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
