--- a/src/app/clientes/form/form.component.html
+++ b/src/app/clientes/form/form.component.html
@@ -59,14 +59,24 @@
       </div>
 
       <div class="form-group row">
+        <label class=" col-form-label col-sm-2" for="region">Región:</label>
+        <div class="col-sm-6">
+          <select [compareWith]="compararRegion" class="form-control" [(ngModel)]="cliente.region" name="region"  style="width:500">
+            <option [ngValue]="undefined" >--- Seleccionar una región ---</option>
+            <option *ngFor="let reg of regiones"  [ngValue]="reg">{{reg.nombre}}</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="form-group row">
         <div class="col-sm-6">
           <button role="button" class="btn btn-primary"  (click)= "create()" *ngIf="!cliente.id else elseBlock" [disabled]="!clienteForm.form.valid" >
             Crear
           </button>
           <ng-template #elseBlock>
             <button role="button" class="btn btn-primary"  (click)= "update()"  [disabled]="!clienteForm.form.valid" >
-                      Editar</button>
-                    </ng-template>
+              Editar</button>
+          </ng-template>
         </div>
       </div>
     </form>
